# cube32_bsp

./: .gitignore  CMakeLists.txt  Kconfig  LICENSE  README.md  idf_component.yml
.github/workflows/: publish.yml
examples/hello_aec_test/: CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32s3
examples/hello_aec_test/main/: idf_component.yml  main.cpp
examples/hello_audio_player/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/hello_audio_player/main/: main.cpp
examples/hello_audio_recorder/: CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32s3
examples/hello_audio_recorder/main/: idf_component.yml  main.cpp
examples/hello_camera/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/hello_camera/main/: main.cpp
examples/hello_display/: CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32s3
examples/hello_display/main/: main.cpp
examples/hello_display/partitions/: partitions.csv
examples/hello_rtc_ntp/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/hello_rtc_ntp/main/: main.cpp
examples/hello_rtc_ntp/partitions/: partitions.csv
examples/hello_world/: CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32s3
examples/hello_world/main/: main.cpp
include/: cube32.h  cube32_config.h
include/drivers/audio/: audio_codec.h
include/drivers/ble/: ble_ota.h  ble_ota_ui.h
include/drivers/button/: adc_button.h
include/drivers/camera/: camera.h
include/drivers/display/: st7789.h
include/drivers/imu/: lsm6dso.h
include/drivers/io_expander/: tca9554.h
include/drivers/lvgl/: lvgl_driver.h
include/utils/: common.h  config_manager.h  hw_manifest.h  i2c_bus.h  spi_bus.h
src/: cube32.cpp
src/drivers/rtc/: bm8563.cpp
src/utils/: config_manager.cpp  hw_manifest.cpp  i2c_bus.cpp  spi_bus.cpp
(+31 files in other folders)
